--- a/public/index.html
+++ b/public/index.html
@@ -6,31 +6,24 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta name="description" content="my profolio" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,600;1,500&family=Noto+Sans+Buhid&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sofia:ital,wght@0,600;1,500&family=Noto+Sans+Buhid&display=swap" rel="stylesheet">
 
 
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital@1&family=Josefin+Sans:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,600;1,500&family=Noto+Sans+Buhid&family=Sofia&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+    <title>OSAZEE</title>
 </head>
 
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
 </body>
 
 </html>
