--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,600;1,500&family=Noto+Sans+Buhid&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sofia:ital,wght@0,600;1,500&family=Noto+Sans+Buhid&display=swap" rel="stylesheet">
-
+    <link href="/dist/output.css" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital@1&family=Josefin+Sans:wght@100&display=swap" rel="stylesheet">
