--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,600;1,500&family=Noto+Sans+Buhid&family=Sofia&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
+    <link rel="icon" type="image/x-icon" href="https://www.flaticon.com/free-icons/fire">
+
 
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital@1&family=Josefin+Sans:wght@100&display=swap" rel="stylesheet">
 
